Added common dependencies